# DAGForge

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  README_CN.md  buildfile  docker-compose.yml  docker_config.toml  manifest  repositories.manifest  system_config.toml
.github/workflows/: release-beta.yml
bench/: airflow_bench.toml
bench/scripts/: analyze_airflow_bench_breakdown.py  bench_db_env.py  gen_airflow_bench_dags.py  gen_realistic_bench_dags.py  perf_pipeline.py  run_airflow_bench.py  run_airflow_stability.py  run_multi_dag_http_bench.sh
cmake/: Dependencies.cmake  ProjectOptions.cmake
dags/: branching.toml  daily_etl.toml  hello_world.toml  sensors.toml  trigger_rules.toml  xcom_pipeline.toml
docs/: API.md  BENCH_REPORT.md  README.md  USER_GUIDE.md
include/dagforge/app/: application.hpp  config_builder.hpp  metrics_exporter.hpp  metrics_registry.hpp
include/dagforge/app/api/: api_dto.hpp  api_server.hpp
include/dagforge/app/http/: http_server.hpp  router.hpp  websocket.hpp
include/dagforge/app/services/: dag_catalog_service.hpp  execution_event_bridge.hpp  execution_service.hpp  persistence_service.hpp  scheduler_service.hpp
include/dagforge/cli/: command_types.hpp  commands.hpp  context.hpp  formatting.hpp  management_client.hpp
include/dagforge/client/docker/: docker_client.hpp
include/dagforge/config/: config.hpp  config_watcher.hpp  dag_definition.hpp  dag_file_loader.hpp  dag_info_loader.hpp  system_config.hpp  system_config_loader.hpp  task_config.hpp  task_policies.hpp  task_types.hpp  toml_util.hpp
include/dagforge/core/: arena.hpp  asio_awaitable.hpp  constants.hpp  coroutine.hpp  error.hpp  memory.hpp  metrics.hpp  runtime.hpp  shard.hpp  sync_wait.hpp
include/dagforge/dag/: dag.hpp  dag_domain.hpp  dag_manager.hpp  dag_run.hpp  dag_validator.hpp  graph_types.hpp  run_types.hpp
include/dagforge/executor/: composite_executor.hpp  executor.hpp  executor_dto.hpp  executor_state.hpp  executor_types.hpp  executor_utils.hpp  process_launch.hpp  process_management.hpp
include/dagforge/io/: buffer.hpp  context.hpp  result.hpp  timing_wheel.hpp
include/dagforge/scheduler/: cron.hpp  engine.hpp  event_queue.hpp  execution_info.hpp  retry_policy.hpp  task.hpp  task_state.hpp
include/dagforge/storage/: dag_state_adapter.hpp  database_service.hpp  mysql_database.hpp  mysql_schema.hpp  orm_models.hpp
include/dagforge/util/: backoff.hpp  conv.hpp  daemon.hpp  encoding.hpp  enum.hpp  enum_mysql_formatter.hpp  hash.hpp  id.hpp  json.hpp  log.hpp  string_hash.hpp  time.hpp  url.hpp  util.hpp
include/dagforge/xcom/: template_resolver.hpp  xcom_codec.hpp  xcom_extractor.hpp  xcom_types.hpp  xcom_util.hpp
scripts/: init.sql
src/: buildfile  main.cpp
src/dagforge/app/: application.cpp  config_builder.cpp  metrics_exporter.cpp
src/dagforge/cli/: clear.cpp  context.cpp  db.cpp  list.cpp  logs.cpp  management_client.cpp  run.cpp  serve.cpp  state.cpp  status.cpp  test.cpp  validate.cpp
src/dagforge/config/: config.cpp  config_watcher.cpp  dag_definition.cpp  dag_file_loader.cpp  dag_info_loader.cpp  system_config_loader.cpp
src/dagforge/core/: runtime.cpp  shard.cpp
src/dagforge/dag/: dag.cpp  dag_manager.cpp  dag_run.cpp
src/dagforge/executor/: composite_executor.cpp  docker_executor.cpp  executor_registry.cpp  noop_executor.cpp  sensor_executor.cpp  shell_executor.cpp
src/dagforge/io/: context.cpp  timing_wheel.cpp
src/dagforge/scheduler/: cron.cpp  engine.cpp
src/dagforge/storage/: dag_state_adapter.cpp  mysql_database.cpp
src/dagforge/util/: daemon.cpp  id.cpp  log.cpp
src/dagforge/xcom/: template_resolver.cpp  xcom_codec.cpp  xcom_extractor.cpp  xcom_util.cpp
src/modules/: app.cppm  base.cppm  cli.cppm  client.cppm  config.cppm  core.cppm  dag.cppm  dagforge.cppm  domain.cppm  executor.cppm  io.cppm  scheduler.cpp  scheduler.cppm  storage.cppm  task_types.cppm  util.cppm  xcom.cppm
tests/: CMakeLists.txt  api_e2e_test.cpp  api_test.cpp  bench_config_parse.cpp  bench_dag_engine.cpp  bench_memory_arena.cpp  bench_mysql_storage.cpp  bench_runtime.cpp  bench_scheduler_service.cpp  bench_utils.hpp  bench_websocket_broadcast.cpp  bench_xcom.cpp  benchmark_compat.hpp  branching_test.cpp  buildfile  cli_binary_test.cpp  cli_test.cpp  config_loader_fuzz_test.cpp  config_test.cpp  config_watcher_test.cpp  coroutine_test.cpp  cron_test.cpp  daemon_test.cpp  dag_catalog_service_test.cpp  dag_domain_test.cpp  dag_info_loader_fuzz_test.cpp  dag_manager_test.cpp  dag_run_test.cpp  dag_test.cpp  dag_validation_test.cpp  docker_client_test.cpp  docker_executor_test.cpp  e2e_test_support.hpp  edge_case_toml_e2e_test.cpp  engine_test.cpp  execution_event_bridge_test.cpp  execution_quiescence.hpp  execution_service_test.cpp  executor_test.cpp  http_client_test.cpp  (+27 more)
tests/fixtures/: test_fixture.hpp
tests/fixtures/edge_cases/: scene08_trigger_rules_boundary.toml  scene09_xcom_default_value.toml  scene10_retry_timeout.toml  scene11_retry_timeout_terminal.toml  scene12_docker_timeout.toml  scene13_sensor_xcom_pipeline.toml  scene14_sensor_soft_fail.toml  scene15_xcom_trigger_join.toml
tests/fixtures/topologies/: scene01_linear.toml  scene02_tree.toml  scene03_burst_ready.toml  scene04_diamond.toml  scene05_fanout.toml  scene06_fanin.toml  scene07_mesh.toml
web-ui/: .env.example  IMPROVEMENTS.md  index.html  package.json  tailwind.config.ts  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: AppLayout.tsx  AppSidebar.tsx  CommandPalette.tsx  DAGFlow.tsx  DAGSummaryCard.tsx  ErrorBoundary.tsx  LanguageToggle.tsx  RunSparkline.tsx  StatCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx
web-ui/src/contexts/: I18nContext.tsx
web-ui/src/hooks/: useDAGQueries.ts  useNotification.ts  useSystemData.ts  useWebSocket.ts  useWebSocketEvents.ts
web-ui/src/lib/: api.ts  config.ts  dag-overview.ts  i18n.ts  search.ts  status.tsx  websocket.ts
web-ui/src/pages/: DAGDetail.tsx  DAGs.tsx  Dashboard.tsx  History.tsx  NotFound.tsx  Settings.tsx
web-ui/src/types/: dag.ts
(+33 files in other folders)
